2009-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_set_color):  plot .. lc N should take
	only the color from linetype N, not any of the other properties.
	Bugfix  (e.g.  plot sin(x) with lines lt 0 lc 3)

2008-06-04  Peter Hedwig  <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help
	share/LaTeX/gnuplot-lua-tikz.sty: Update the lua terminal scripts to
	accept a font size in the second slot of a font descriptor string.

2009-06-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c:  The following test script triggered multiple problems.
	                "set multi; set x2data time; set x2tics; unset multi;"
	- initialize mouse_x, mouse_y to -1;  test before using
	- initialize mouse values with VERYLARGE (replace magic number 1e38)
	- xDateTimeFormat: do not attempt to convert VERYLARGE to a date
	Bugfix.

2009-06-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm:  Remove redundant section in gif help text.

2009-06-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Enhanced text markup applied to a
	single multibyte character was producing garbage.  Fix this for UTF-8.
	Other multibyte encoding may still trigger this problem.
	Bugfix #2800539

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (get_position_default):  Ugly hack to work around
	ambiguous syntax if "offset x,y" is the last thing in a plot clause.
	Bugfix #2726798

2009-05-31  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/term-ja.diff docs/gnuplot-ja.doc:  Sync to rev.1.568

	* docs/gnuplot.doc term/gd.trm: typos in documentation

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	Start branch for Release 4.4
	Set VERSION to 4.4   PATCHLEVEL to alpha

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Revert the global attribute xml:space="preserve"
	because Firefox 3 messes up badly when it is present.
